--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-<title> PROJETO FINAL </title>
+<title> PROJETO FINAL: Harry Potter - Grupo 8 </title>
 
 <h1> Harry Potter </h1>
 <br>
